improved pathfinder, gamemode nodes, bug fixes